--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-<meta name="description" content="ma balls">
-<meta name="author" content="Jitter">
+    <title>ma balls</title>
+    <meta content="ma balls" property="og:title" />
+    <meta content="ma balls" property="og:description" />
 ma balls
