--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
     <title>ma balls</title>
     <meta content="ma balls" property="og:title" />
     <meta content="ma balls" property="og:description" />
-ma balls
+hi, I'm jitter
+
+I do a lot of stuff
+
+I work in Java, Python, Lua & LuaU, HTML/CSS/JS...
+
+if you want to get in touch, you can find me at @gitter on Discord!
