--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
     <title>ma balls</title>
     <meta content="ma balls" property="og:title" />
     <meta content="ma balls" property="og:description" />
-hi, I'm jitter
+hi, I'm jitter<br>
 
-I do a lot of stuff
+I do a lot of stuff<br>
 
-I work in Java, Python, Lua & LuaU, HTML/CSS/JS...
+I work in Java, Python, Lua & LuaU, HTML/CSS/JS...<br>
 
 if you want to get in touch, you can find me at @gitter on Discord!
