--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
     <meta content="ma balls" property="og:description" />
 hi, I'm jitter<br>
 
-I do a lot of stuff<br>
+i occasionally change this website. come back some time soon and maybe it'll be different<br>
 
-I work in Java, Python, Lua & LuaU, HTML/CSS/JS...<br>
-
-if you want to get in touch, you can find me at @gitter on Discord!
+troll face
