--- a/index.html
+++ b/index.html
@@ -914,8 +914,8 @@
         <p>hi! im <strong>Jitter</strong><br>theres no telling how you found my website but its pretty cool that you did<br>
         <p>i work on a lot of different stuff but im mostly known for my work on <strong>
           <a href="https://discord.com/invite/perdere">perdere</a>
-        </strong> and <strong>
-          <a href="https://discord.com/invite/elusivelast">elusive last</a>
+        </strong> and formerly <strong>
+          elusive last
         </strong></p>
             <!-- <a href="https://en.wikipedia.org/wiki/Free_software">free software</a>
           </strong> different things i work on<strong>
