cant trust the internet lowkey

--- a/index.html
+++ b/index.html
@@ -913,7 +913,7 @@
         <h1 id="about">About</h1>
         <p>hi! im <strong>Jitter</strong><br>theres no telling how you found my website but its pretty cool that you did<br>
         <p>i work on a lot of different stuff but im mostly known for my work on <strong>
-          <a href="https://discord.com/invite/perdere">perdere</a>
+          perdere
         </strong> and formerly <strong>
           elusive last
         </strong></p>
